petclinic/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "petclinic-ingress"
  labels:
    name: "petclinic-app"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - petclinic.sub.dsyer.com
    secretName: petclinic-tls
  rules:
  - host: petclinic.sub.dsyer.com
    http:
      paths:
        - path: /
          backend:
            serviceName: petclinic-app
            servicePort: 80
